--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Cuidemos al Sistema Solar</title>
     <link rel="stylesheet" href="Estilo.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link rel="icon" href="../capa solar/img/nuevo logo.PNG">
+    <link rel="icon" href="img/nuevo2.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
  <figure class="logo">
-    <img src="img/PicsArt_08-12-10.54.44 (5).png" alt="" width=50%>
+    <img src="img/nuevo2.png" alt="" width=50%>
  </figure>
 
 
@@ -32,7 +32,8 @@
     </header>
  <section class="principal"id="principal">
    <h1>Cuidemos la Capa de Ozono</h1>
-   <img src="img/PicsArt_08-12-10.54.44 (5).png" alt=""> 
+   <img src="PicsArt_08_12_1054.44(5)"alt="">
+   <img src="img/PicsArt_08-12-10.54.44 (5).png" alt="">
  
  </section>  
  <section class="secundaria"id="secundaria">
@@ -42,7 +43,7 @@
  </section>
  <section class="Tercera"id="Tercera">
     <h1>Solución para cuidar el planeta</h1>
-    <p>Mi Solución es hacer una aplicasión y esa aplicasión  me va a decir si alguien tira basura y ese alguien tendra que pagar una multa.</p>
+    <p>Mi Solución es hacer una aplicación y esa aplicaión  me va a decir si alguien tira basura y ese alguien tendra que pagar una multa.</p>
     <img src="https://www.latercera.com/resizer/SoDlK_zuxCjuetxkvZXGnXgPpTc=/900x600/smart/arc-anglerfish-arc2-prod-copesa.s3.amazonaws.com/public/TIX7N63LCNBM7PAHDRB5KPIHG4.jpg" alt=""width=50% > 
  </section>
  <section class="cuarta"id="cuarta">
