--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     </header>
  <section class="principal"id="principal">
    <h1>Cuidemos la Capa de Ozono</h1>
-   <img src="PicsArt_08_12_1054.44(5)"alt="">
-   <img src="img/PicsArt_08-12-10.54.44 (5).png" alt="">
+   <img src="img/nuevo2.png" alt="">
  
  </section>  
  <section class="secundaria"id="secundaria">
