--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     </header>
  <section class="principal"id="principal">
-   <h1>Cuidemos la Capa de Ozono</h1>
+   <h1>Cuidemos Juntos</h1>
    <img src="img/nuevo2.png" alt="">
  
  </section>  
